	 with a lot of branches. (#139364)

   * Work around memory leak in the Python Subversion bindings of svn.ra.get_log(). 

  FEATURES

   * Support retrieving credentials from Bazaar rather than relying on Subversions' cache. (#120768)

  INTERNALS
  
   * Added pydoctor configuration file.

  BUG FIXES

   * Improved compatibility with Subversion 1.5.

bzr-svn 0.4.5	2007-12-01

  IMPROVEMENTS

   * Add revision specifier for "svn:" that accepts a single revision number. (#160605)

  INTERNALS

   * No longer store svn:author, svn:date and svn:log in the bzr-svn cache. 
     This should make it easier to use bzr-specific revprops later on and 
     saves some disk space.

   * Use new rich-roots format everywhere rather than experimental 
     dirstate-with-subtree.

  BUG FIXES

   * Properly decode unicode commit messages. 

   * Handle some corner cases when finding branches.

   * Print comprehensible error when unsupport characters occur in file names.
     (partial fix of #163585)

   * Fix compatibility with Bazaar 1.0rc1.


bzr-svn 0.4.4	2007-11-02

  PERFORMANCE

   * Improved import times, making bzr faster if bzr-svn is loaded but 
     not used.

  IMPROVEMENTS
   
   * Avoid tracebacks on "Malformed data" errors.

   * Make push location optional for svn-push. 
   
   * Make svn-push support --remember.

   * No longer gives trackeback when already upgraded revisions are present.
     (#130471)

   * Clearer error when prefix is missing during push.

   * Support optionally overriding svn:author and svn:date (#140001)

   * Convert errno's returned by the remote server into OSError exceptions.

  INTERNALS

   * Handle NULL_REVISION in SvnRepository.copy_content(). Fixes compatibility 
     with bzr merge-into.

   * Implement ListBranchingScheme.is_branch_parent(). (#144357)

   * Use revprop lists rather than just commit message when committing.

   * The version of bzr-rebase is now checked before it's being used.
