@@ -148,6 +148,23 @@ class TestPush(TestCaseWithSubversionRepository):
         self.assertEqual(repos.generate_revision_id(2, "", "none"),
                         self.svndir.open_branch().last_revision())
 
+    def test_symlink(self):
+        if os.name == 'win32':
+            return
+        os.symlink("bla", "dc/south")
+        assert os.path.islink("dc/south")
+        wt = self.bzrdir.open_workingtree()
+        wt.add('south')
+        wt.commit(message="Commit from Bzr")
+
+        self.svndir.open_branch().pull(self.bzrdir.open_branch())
+
+        repos = self.svndir.find_repository()
+        inv = repos.get_inventory(repos.generate_revision_id(2, "", "none"))
+        self.assertTrue(inv.has_filename('south'))
+        self.assertEquals('symlink', inv[inv.path2id('south')].kind)
+        self.assertEquals('bla', inv[inv.path2id('south')].symlink_target)
+
     def test_pull_after_push(self):
         self.build_tree({'dc/file': 'data'})
         wt = self.bzrdir.open_workingtree()
